Centering the images.

--- a/C5/W1/W1A1/Building_a_Recurrent_Neural_Network_Step_by_Step.ipynb
+++ b/C5/W1/W1A1/Building_a_Recurrent_Neural_Network_Step_by_Step.ipynb
@@ -143,7 +143,7 @@
     "id": "ZBxzkRzsELFv"
    },
    "source": [
-    "<img src=\"images/RNN.png\" style=\"width:500;height:300px;\">\n",
+    "<center><img src=\"images/RNN.png\" style=\"width:500;height:300px;\"></center>\n",
     "<caption><center><font color='purple'><b>Figure 1</b>: Basic RNN model </center></caption>"
    ]
   },
@@ -271,8 +271,10 @@
     "\n",
     "You can think of the recurrent neural network as the repeated use of a single cell. First, you'll implement the computations for a single time step. The following figure describes the operations for a single time step of an RNN cell: \n",
     "\n",
-    "<img src=\"images/rnn_step_forward_figure2_v3a.png\" style=\"width:700px;height:300px;\">\n",
-    "<caption><center><font color='purple'><b>Figure 2</b>: Basic RNN cell. Takes as input $x^{\\langle t \\rangle}$ (current input) and $a^{\\langle t - 1\\rangle}$ (previous hidden state containing information from the past), and outputs $a^{\\langle t \\rangle}$ which is given to the next RNN cell and also used to predict $\\hat{y}^{\\langle t \\rangle}$ \n",
+    "<center><img src=\"images/rnn_step_forward_figure2_v3a.png\" style=\"width:700px;height:300px;\"></center>\n",
+    "<caption><center><font color='purple'>\n",
+    "\n",
+    "<b>Figure 2</b>: Basic RNN cell. Takes as input $x^{\\langle t \\rangle}$ (current input) and $a^{\\langle t - 1\\rangle}$ (previous hidden state containing information from the past), and outputs $a^{\\langle t \\rangle}$ which is given to the next RNN cell and also used to predict $\\hat{y}^{\\langle t \\rangle}$ </font>\n",
     "</center></caption>\n",
     "\n",
     "**`RNN cell` versus `RNN_cell_forward`**:\n",
@@ -451,8 +453,10 @@
     "    - They are maintained between calls to `rnn_cell_forward` in the 'parameters' dictionary\n",
     "\n",
     "\n",
-    "<img src=\"images/rnn_forward_sequence_figure3_v3a.png\" style=\"width:800px;height:180px;\">\n",
-    "<caption><center><font color='purple'><b>Figure 3</b>: Basic RNN. The input sequence $x = (x^{\\langle 1 \\rangle}, x^{\\langle 2 \\rangle}, ..., x^{\\langle T_x \\rangle})$  is carried over $T_x$ time steps. The network outputs $y = (y^{\\langle 1 \\rangle}, y^{\\langle 2 \\rangle}, ..., y^{\\langle T_x \\rangle})$. </center></caption>\n"
+    "<center><img src=\"images/rnn_forward_sequence_figure3_v3a.png\" style=\"width:800px;height:180px;\"></center>\n",
+    "<caption><center><font color='purple'>\n",
+    "\n",
+    "<b>Figure 3</b>: Basic RNN. The input sequence $x = (x^{\\langle 1 \\rangle}, x^{\\langle 2 \\rangle}, ..., x^{\\langle T_x \\rangle})$  is carried over $T_x$ time steps. The network outputs $y = (y^{\\langle 1 \\rangle}, y^{\\langle 2 \\rangle}, ..., y^{\\langle T_x \\rangle})$. </center></caption>\n"
    ]
   },
   {
@@ -679,9 +683,11 @@
     "\n",
     "The following figure shows the operations of an LSTM cell:\n",
     "\n",
-    "<img src=\"images/LSTM_figure4_v3a.png\" style=\"width:500;height:400px;\">\n",
-    "<caption><center><font color='purple'><b>Figure 4</b>: LSTM cell. This tracks and updates a \"cell state,\" or memory variable $c^{\\langle t \\rangle}$ at every time step, which can be different from $a^{\\langle t \\rangle}$.  \n",
-    "Note, the $softmax^{}$ includes a dense layer and softmax.</center></caption>\n",
+    "<center><img src=\"images/LSTM_figure4_v3a.png\" style=\"width:500;height:400px;\"></center>\n",
+    "<caption><center><font color='purple'>\n",
+    "\n",
+    "<b>Figure 4</b>: LSTM cell. This tracks and updates a \"cell state,\" or memory variable $c^{\\langle t \\rangle}$ at every time step, which can be different from $a^{\\langle t \\rangle}$.  \n",
+    "Note, the $softmax^{}$ includes a dense layer and softmax.</font></center></caption>\n",
     "\n",
     "Similar to the RNN example above, you'll begin by implementing the LSTM cell for a single time step. Then, you'll iteratively call it from inside a \"for loop\" to have it process an input with $T_x$ time steps. "
    ]
@@ -1107,8 +1113,8 @@
     "\n",
     "Now that you have implemented one step of an LSTM, you can iterate this over it using a for loop to process a sequence of $T_x$ inputs. \n",
     "\n",
-    "<img src=\"images/LSTM_rnn.png\" style=\"width:500;height:300px;\">\n",
-    "<caption><center><font color='purple'><b>Figure 5</b>: LSTM over multiple time steps. </center></caption>\n",
+    "<center><img src=\"images/LSTM_rnn.png\" style=\"width:500;height:300px;\"></center>\n",
+    "<caption><center><font color='purple'><b>Figure 5</b>: LSTM over multiple time steps. </font></center></caption>\n",
     "\n",
     "<a name='ex-4'></a>    \n",
     "### Exercise 4 - lstm_forward\n",
@@ -1376,8 +1382,11 @@
     "\n",
     "Begin by computing the backward pass for the basic RNN cell. Then, in the following sections, iterate through the cells.\n",
     "\n",
-    "<img src=\"images/rnn_backward_overview_3a_1.png\" style=\"width:500;height:300px;\"> <br>\n",
-    "<caption><center><font color='purple'><b>Figure 6</b>: The RNN cell's backward pass. Just like in a fully-connected neural network, the derivative of the cost function $J$ backpropagates through the time steps of the RNN by following the chain rule from calculus. Internal to the cell, the chain rule is also used to calculate $(\\frac{\\partial J}{\\partial W_{ax}},\\frac{\\partial J}{\\partial W_{aa}},\\frac{\\partial J}{\\partial b})$ to update the parameters $(W_{ax}, W_{aa}, b_a)$. The operation can utilize the cached results from the forward path. </center></caption>"
+    "<center><img src=\"images/rnn_backward_overview_3a_1.png\" style=\"width:500;height:300px;\"></center>\n",
+    "<caption><center><font color='purple'>\n",
+    "\n",
+    "<b>Figure 6</b>: The RNN cell's backward pass. Just like in a fully-connected neural network, the derivative of the cost function \n",
+    "$J$ backpropagates through the time steps of the RNN by following the chain rule from calculus. Internal to the cell, the chain rule is also used to calculate $(\\frac{\\partial J}{\\partial W_{ax}},\\frac{\\partial J}{\\partial W_{aa}},\\frac{\\partial J}{\\partial b})$ to update the parameters $(W_{ax}, W_{aa}, b_a)$. The operation can utilize the cached results from the forward path.</center></caption>"
    ]
   },
   {
@@ -1398,10 +1407,11 @@
    },
    "source": [
     "\n",
-    "<img src=\"images/rnn_cell_backward_3a_c.png\" style=\"width:800;height:500px;\"> <br>\n",
-    "<caption><center><font color='purple'><b>Figure 7</b>: This implementation of `rnn_cell_backward` does **not** include the output dense layer and softmax which are included in `rnn_cell_forward`.  \n",
+    "<center><img src=\"images/rnn_cell_backward_3a_c.png\" style=\"width:800;height:500px;\"></center>\n",
+    "<caption><center><font color='purple'>\n",
     "\n",
-    "$da_{next}$ is $\\frac{\\partial{J}}{\\partial a^{\\langle t \\rangle}}$ and includes loss from previous stages and current stage output logic. The addition shown in green will be part of your implementation of `rnn_backward`.  </center></caption>"
+    "<b>Figure 7</b>: This implementation of `rnn_cell_backward` does **not** include the output dense layer and softmax which are included in `rnn_cell_forward`.  \n",
+    "$da_{next}$ is $\\frac{\\partial{J}}{\\partial a^{\\langle t \\rangle}}$ and includes loss from previous stages and current stage output logic. The addition shown in green will be part of your implementation of `rnn_backward`. </center></caption>"
    ]
   },
   {
@@ -1903,8 +1913,10 @@
     "#### 1. One Step Backward\n",
     "The LSTM backward pass is slightly more complicated than the forward pass.\n",
     "\n",
-    "<img src=\"images/LSTM_cell_backward_rev3a_c2.png\" style=\"width:500;height:400px;\"> <br>\n",
-    "<caption><center><font color='purple'><b>Figure 8</b>: LSTM Cell Backward. Note the output functions, while part of the `lstm_cell_forward`, are not included in `lstm_cell_backward` </center></caption>\n",
+    "<center><img src=\"images/LSTM_cell_backward_rev3a_c2.png\" style=\"width:500;height:400px;\"></center>\n",
+    "<caption><center><font color='purple'>\n",
+    "\n",
+    "<b>Figure 8</b>: LSTM Cell Backward. Note the output functions, while part of the `lstm_cell_forward`, are not included in `lstm_cell_backward` </font></center></caption>\n",
     "\n",
     "The equations for the LSTM backward pass are provided below. (If you enjoy calculus exercises feel free to try deriving these from scratch yourself.)"
    ]
