--- a/C5/W1/W1A2/Dinosaurus_Island_Character_level_language_model.ipynb
+++ b/C5/W1/W1A2/Dinosaurus_Island_Character_level_language_model.ipynb
@@ -467,7 +467,9 @@
     "Now, assume that your model is trained, and you would like to generate new text (characters). The process of generation is explained in the picture below:\n",
     "\n",
     "<center><img src=\"images/dinos3.png\" style=\"width:500;height:300px;\"></center>\n",
-    "<caption><center><font color='purple'><b>Figure 3</b>: In this picture, you can assume the model is already trained. You pass in $x^{\\langle 1\\rangle} = \\vec{0}$ at the first time-step, and have the network sample one character at a time. </center></caption>"
+    "<caption><center><font color='purple'>\n",
+    "\n",
+    "<b>Figure 3</b>: In this picture, you can assume the model is already trained. You pass in $x^{\\langle 1\\rangle} = \\vec{0}$ at the first time-step, and have the network sample one character at a time. </center></caption>"
    ]
   },
   {
